k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-hub-nats-flapi-service
  namespace: prod-hub-nats-flapi
  labels:
    app: nats
spec:
  selector:
    app: nats
  ports:
    - name: client-tcp
      port: 4224
      targetPort: 4224
    - name: client-ws
      port: 443
      targetPort: 443
    - name: monitor
      port: 8222
